version/0.6/_sources/api/ansys/heart/simulator/settings/settings/Electrophysiology.rst.txt


:class:`Electrophysiology`
==========================

.. py:class:: ansys.heart.simulator.settings.settings.Electrophysiology

   Bases: :py:obj:`Settings`


   
   Class for keeping track of electrophysiology settings.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: Electrophysiology

Overview
--------

.. tab-set::





   .. tab-item:: Attributes

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~material`
            - Material settings/configuration.
          * - :py:attr:`~analysis`
            - Generic analysis settings.
          * - :py:attr:`~stimulation`
            - Stimulation settings.






Import detail
-------------

.. code-block:: python

    from ansys.heart.simulator.settings.settings import Electrophysiology



Attribute detail
----------------
.. py:attribute:: material
   :type:  EpMaterial

   
   Material settings/configuration.
















   ..
       !! processed by numpydoc !!

.. py:attribute:: analysis
   :type:  EPAnalysis

   
   Generic analysis settings.
















   ..
       !! processed by numpydoc !!

.. py:attribute:: stimulation
   :type:  AttrDict[str, Stimulation]
   :value: None


   
   Stimulation settings.
















   ..
       !! processed by numpydoc !!




